# say-it-with-your-chesst

./: .gitignore  CMakeLists.txt  LICENSE  README.md  board.c  board.h  main.c  move.c  move.h
src/: board.c  board.h  main.c  minimax.c  minimax.h  move.c  move.h  move_picker.c  move_picker.h  postional_score_matrices.c  postional_score_matrices.h
tests/: move_test.c
